# Doria

./: .gitignore  README.md  package-lock.json
.github/workflows/: codeql.yml  rust.yml  sonarcloud.yml  trivy.yml
doria-cli/: Cargo.toml  README.md  test.js
doria-cli/doria-cli/: Cargo.toml
doria-cli/doria-cli/src/: main.rs
doria-cli/doria-core/: Cargo.toml  README.md
doria-cli/doria-core/src/: lib.rs  scanner.rs
doria-cli/doria-core/src/detect/: credentials.rs  hooks.rs  mod.rs  network.rs  obfuscation.rs  shell.rs
doria-cli/doria-scanner/: Cargo.toml
doria-cli/doria-scanner/src/: main.rs
doria-cli/doria-types/: Cargo.toml  README.md
doria-cli/doria-types/src/: lib.rs
doria-cli/test_samples/: malicious.js
doria-ml-engine/: .gitignore  README.md  calculate_score.py  harvester.py  historical_harvester.py  historical_poison.txt  known_slopsquats.json  llm_agent.py  model1_behavior.json  model1_features.csv  model2_features.csv  model2_nlp.json  requirements.txt  scanner.py  similarity.py  train_model.py
test-env/: package-lock.json  package.json
test-env/obfuscated-mal/: index.js
test-env/soph-mal/: index.js
